--- a/public/css/style.css
+++ b/public/css/style.css
@@ -11,6 +11,11 @@ ul {
   margin: 0;
 }
 
+a {
+  text-decoration: none;
+  color: #000;
+}
+
 input, textarea {
   outline: none;
   padding: 10px;
@@ -987,6 +992,104 @@ input[type="number"] {
   .footer_design {
     font-size: 12px;
     padding: 5px;
+  }
+}
+
+.fixed-btn {
+  position: fixed;
+  right: 40px;
+  top: 50%;
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
+  z-index: 10;
+}
+
+.fixed-btn a {
+  cursor: pointer;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  width: 60px;
+  height: 80px;
+  background-color: rgba(255, 255, 255, 0.75);
+  -webkit-box-shadow: 0 0 2px rgba(0, 0, 0, 0.25);
+          box-shadow: 0 0 2px rgba(0, 0, 0, 0.25);
+}
+
+.fixed-btn a svg {
+  width: 66.67%;
+}
+
+.fixed-btn a svg .mainIcon {
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
+}
+
+.fixed-btn a:first-child {
+  border-radius: 100px 100px 0 0;
+}
+
+.fixed-btn a:last-child {
+  border-radius: 0 0 100px 100px;
+}
+
+.fixed-btn a:hover svg .mainIcon {
+  fill: #CF7115;
+}
+
+.fixed-btn a:hover span {
+  color: #CF7115;
+}
+
+.fixed-btn a span {
+  font-size: 12px;
+  width: 100%;
+  text-align: center;
+  line-height: 1.3;
+  display: block;
+  -webkit-transform: translateY(-3px);
+          transform: translateY(-3px);
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
+}
+
+@media screen and (max-width: 575px) {
+  .fixed-btn {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    width: 100%;
+    right: 0;
+    top: inherit;
+    bottom: 0;
+    -webkit-transform: none;
+            transform: none;
+  }
+  .fixed-btn a {
+    width: 25%;
+    height: 60px;
+    border-radius: 0 !important;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .fixed-btn a svg {
+    width: 40px;
+  }
+  .fixed-btn a span {
+    width: -webkit-fit-content;
+    width: -moz-fit-content;
+    width: fit-content;
+    -webkit-transform: none;
+            transform: none;
   }
 }
 /*# sourceMappingURL=style.css.map */
