--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -11,6 +11,12 @@ ul {
     padding: 0;
     margin: 0;
 }
+
+a {
+    text-decoration: none;
+    color: #000;
+}
+
 input, textarea {
     outline: none;
     padding: 10px;
@@ -908,6 +914,77 @@ input[type="number"] {
         &_design {
             font-size: 12px;
             padding: 5px;
+        }
+    }
+}
+
+.fixed-btn {
+    position: fixed;
+    right: 40px;
+    top: 50%;
+    transform: translateY(-50%);
+    z-index: 10;
+    a {
+        cursor: pointer;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-wrap: wrap;
+        width: 60px;
+        height: 80px;
+        background-color: rgba(255,255,255,0.75);
+        box-shadow: 0 0 2px rgba(0,0,0,0.25);
+        svg {
+            width: 66.67%;
+            .mainIcon {
+                transition: 0.3s;
+            }
+        }
+        &:first-child {
+            border-radius: 100px 100px 0 0;
+        }
+        &:last-child {
+            border-radius: 0 0 100px 100px;
+        }
+        &:hover {
+            svg {
+                .mainIcon {
+                    fill: #CF7115;
+                }
+            }
+            span {
+                color: #CF7115;
+            }
+        }
+        span {
+            font-size: 12px;
+            width: 100%;
+            text-align: center;
+            line-height: 1.3;
+            display: block;
+            transform: translateY(-3px);
+            transition: 0.3s;
+        }
+    }
+    @media screen and (max-width: 575px) {
+        display: flex;
+        width: 100%;
+        right: 0;
+        top: inherit;
+        bottom: 0;
+        transform: none;
+        a {
+            width: 25%;
+            height: 60px;
+            border-radius: 0 !important;
+            align-items: center;
+            svg {
+                width: 40px;
+            }
+            span {
+                width: fit-content;
+                transform: none;
+            }
         }
     }
 }
