--- a/public/css/style.css
+++ b/public/css/style.css
@@ -977,6 +977,12 @@ input[type="number"] {
   color: #CF7115;
 }
 
+@media screen and (max-width: 575px) {
+  .footer {
+    padding-bottom: 50px;
+  }
+}
+
 @media screen and (max-width: 450px) {
   .footer_top_item {
     margin-bottom: 5px;
@@ -1002,6 +1008,7 @@ input[type="number"] {
   -webkit-transform: translateY(-50%);
           transform: translateY(-50%);
   z-index: 10;
+  opacity: 0.75;
 }
 
 .fixed-btn a {
@@ -1017,9 +1024,9 @@ input[type="number"] {
           justify-content: center;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
-  width: 60px;
-  height: 80px;
-  background-color: rgba(255, 255, 255, 0.75);
+  width: 50px;
+  height: 70px;
+  background-color: #fff;
   -webkit-box-shadow: 0 0 2px rgba(0, 0, 0, 0.25);
           box-shadow: 0 0 2px rgba(0, 0, 0, 0.25);
 }
@@ -1049,14 +1056,19 @@ input[type="number"] {
   color: #CF7115;
 }
 
+.fixed-btn a.position svg {
+  -webkit-transform: translateY(4px);
+          transform: translateY(4px);
+}
+
 .fixed-btn a span {
   font-size: 12px;
   width: 100%;
   text-align: center;
   line-height: 1.3;
   display: block;
-  -webkit-transform: translateY(-3px);
-          transform: translateY(-3px);
+  -webkit-transform: translateY(-4px);
+          transform: translateY(-4px);
   -webkit-transition: 0.3s;
   transition: 0.3s;
 }
@@ -1074,22 +1086,23 @@ input[type="number"] {
             transform: none;
   }
   .fixed-btn a {
-    width: 25%;
-    height: 60px;
+    width: 20%;
+    height: 50px;
     border-radius: 0 !important;
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
   }
   .fixed-btn a svg {
-    width: 40px;
+    width: 35px;
   }
   .fixed-btn a span {
-    width: -webkit-fit-content;
-    width: -moz-fit-content;
-    width: fit-content;
     -webkit-transform: none;
             transform: none;
+    width: 100%;
+  }
+  .fixed-btn a.position svg {
+    width: 30px;
   }
 }
 /*# sourceMappingURL=style.css.map */
