--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -897,6 +897,9 @@ input[type="number"] {
             }
         }
     }
+    @media screen and (max-width: 575px) {
+        padding-bottom: 50px;
+    }
     @media screen and (max-width: 450px) {
         &_top {
             &_item {
@@ -924,15 +927,17 @@ input[type="number"] {
     top: 50%;
     transform: translateY(-50%);
     z-index: 10;
+    opacity: 0.75;
     a {
         cursor: pointer;
         display: flex;
         align-items: center;
         justify-content: center;
         flex-wrap: wrap;
-        width: 60px;
-        height: 80px;
-        background-color: rgba(255,255,255,0.75);
+        width: 50px;
+        height: 70px;
+        // background-color: rgba(255,255,255,0.75);
+        background-color: #fff;
         box-shadow: 0 0 2px rgba(0,0,0,0.25);
         svg {
             width: 66.67%;
@@ -956,13 +961,18 @@ input[type="number"] {
                 color: #CF7115;
             }
         }
+        &.position {
+            svg {
+                transform: translateY(4px);
+            }
+        }
         span {
             font-size: 12px;
             width: 100%;
             text-align: center;
             line-height: 1.3;
             display: block;
-            transform: translateY(-3px);
+            transform: translateY(-4px);
             transition: 0.3s;
         }
     }
@@ -974,16 +984,21 @@ input[type="number"] {
         bottom: 0;
         transform: none;
         a {
-            width: 25%;
-            height: 60px;
+            width: 20%;
+            height: 50px;
             border-radius: 0 !important;
             align-items: center;
             svg {
-                width: 40px;
+                width: 35px;
             }
             span {
-                width: fit-content;
                 transform: none;
+                width: 100%;
+            }
+            &.position {
+                svg {
+                    width: 30px;
+                }
             }
         }
     }
